# aiochlite

./: .gitignore  .pytest.toml  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
aiochlite/: __init__.py  client.py  http_client.py
aiochlite/converters/: __init__.py  _type_parsing.py  from_clickhouse.py  rowbinary.py  to_clickhouse.py  to_json.py
aiochlite/core/: client.py  models.py
aioclickhouse/: __init__.py
benchmarks/: README.md  fetch_rows.py
tests/: conftest.py  test_converters.py
tests/core/: test_converters.py  test_models.py  test_rowbinary.py  test_type_parsing.py
tests/integration/: _types.py  conftest.py  test_basic.py  test_client.py  test_data_conversion.py  test_external_tables.py  test_fetch_rows.py  test_insert.py  test_parquet.py  test_query_params.py  test_roundtrip.py  test_rowbinary_supported_types.py
