[project]
name = "aiochlite"
version = "1.0.2"
authors = [{ name = "darkstussy" }, ]
description = "Lightweight asynchronous ClickHouse client for Python built on asyncio."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "aiohttp~=3.13.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/darkstussy/aiochlite"
Issues = "https://github.com/darkstussy/aiochlite/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiochlite"]

[dependency-groups]
dev = [
    "ruff==0.15.13",
    "basedpyright==1.39.4",
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
]

[tool.coverage.run]
source = ["aiochlite"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
